--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Web API simple pour Azure :)",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "debug": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
